# screen-cut

./: .gitignore  LICENSE  README.md
.github/: FUNDING.yml
src-tauri/: Cargo.toml  screencut.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/app/: commands.rs  mod.rs  settings.rs  state.rs
src-tauri/src/core/: types.rs
src-tauri/src/infra/: capture.rs  clipboard.rs  mod.rs  ocr.rs  png_io.rs  scroll.rs
ui/: editor.js  index.html  main.js  overlay.html  overlay.js  scrollctl.html  settings.js  styles.css
