[package]
name = "screen-cut"
version = "0.1.0"
description = "Ligera herramienta de capturas con OCR y captura con scroll"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
png = "0.17"
base64 = "0.22"
dirs = "5"

[dependencies.windows]
version = "0.58"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Media_Ocr",
  "Graphics_Imaging",
  "Storage_Streams",
  "Foundation",
  "Foundation_Collections",
  "Globalization",
  "Security_Cryptography",
  "Win32_System_SystemInformation",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
